--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Alex's Site
 description: 
 google_analytics: 
 show_downloads: false
-theme: jekyll-theme-minimal
+theme: jekyll-theme-modernist
 
 gems:
   - jekyll-mentions
