--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-#title: Alex's Site
-description: 
+title: Alex's Site
+description: Hello, I’m Alex. I engineer software and listen to music and read. Here are my parts of the Internet.
 google_analytics: 
 show_downloads: false
 theme: jekyll-theme-modernist
