--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Alex's Site
-description: Who, that little guy? I wouldn't worry about that little guy.
+#description: Who, that little guy? I wouldn't worry about that little guy.
 google_analytics: 
 show_downloads: false
 theme: jekyll-theme-modernist
