--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Alex Tighe
 #markdown: kramdown
 markdown: rdiscount
 show_downloads: false
-theme: jekyll-theme-modernist
+#theme: jekyll-theme-modernist
