--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 title: Alex Tighe
-#markdown: kramdown
-markdown: maroku
+markdown: kramdown
 show_downloads: false
-#theme: jekyll-theme-modernist
+theme: jekyll-theme-modernist
