--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ logo: /assets/img/me_round.png
 show_downloads: false
 github:
   is_project_page: false
-remote_theme: pages-themes/minimal@v0.2.0
+theme: minimal
