--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ logo: /assets/img/me_round.png
 show_downloads: false
 github:
   is_project_page: false
+  is_user_page: false
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
-- jekyll-remote-theme
+  - jekyll-remote-theme
