--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
-title: Hi, I'm Alex
-logo: /assets/img/me_round.png
+title: Hi, I'm Alex!
+# logo: /assets/img/me_round.png
 show_downloads: false
 github:
   is_project_page: false
   is_user_page: false
-remote_theme: pages-themes/minimal@v0.2.0
+# remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: pages-themes/slate@v0.2.0
 plugins:
   - jekyll-remote-theme
