--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,6 @@ show_downloads: false
 github:
   is_project_page: false
   is_user_page: false
-# remote_theme: pages-themes/minimal@v0.2.0
-remote_theme: pages-themes/slate@v0.2.0
+remote_theme: pages-themes/tactile@v0.2.0
 plugins:
   - jekyll-remote-theme
